tests/fixtures/pass/while_mutation.sc
let main(): i32 = {
  let mut value = 0
  while value < 42 {
    value = value + 1
  }
  value
}
